DigicielFull/force-app/main/default/objects/amc__Role_Allocation__c/fields/amc__Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Action record this Role Allocation relates to</inlineHelpText>
    <label>Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Role Allocations</relationshipLabel>
    <relationshipName>Role_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>