DigicielFull/force-app/main/default/objects/amc__Role_Allocation__c/fields/amc__Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Date__c</fullName>
    <inlineHelpText>Identifies the Date this Role Allocation relates to</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>