DigicielFull/force-app/main/default/objects/amc__Role_Allocation__c/fields/amc__Hours_Completed_Value_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Value_Cost__c</fullName>
    <inlineHelpText>Roll up summary of the Hours Completed Value (Cost) field on related Role Actual records</inlineHelpText>
    <label>Hours Completed Value (Cost)</label>
    <summarizedField>amc__Role_Actual__c.amc__Hours_Completed_Value_Cost__c</summarizedField>
    <summaryForeignKey>amc__Role_Actual__c.amc__Role_Allocation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>