DigicielFull/force-app/main/default/objects/amc__Role_Allocation__c/fields/amc__Hours_Scheduled_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled_Non_Billable__c</fullName>
    <inlineHelpText>Identifies the number of Non Billable Hours assigned to this Role Allocation from the Role Forecast or Action it relates to</inlineHelpText>
    <label>Hours Scheduled - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>