DigicielFull/force-app/main/default/objects/amc__Role_Allocation__c/fields/amc__Hours_Scheduled_Value_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled_Value_Billable__c</fullName>
    <inlineHelpText>Identifies the scheduled billable value of this Role Allocation by multiplying the Hours Scheduled - Billable with the appropriate Billable Hourly Rate</inlineHelpText>
    <label>Hours Scheduled Value (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>