DigicielFull/force-app/main/default/objects/amc__Role_Allocation__c/fields/amc__Hours_Scheduled_Value_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled_Value_Cost__c</fullName>
    <inlineHelpText>Identifies the scheduled cost value of this Role Allocation by multiplying the Total Hours Scheduled with the appropriate Cost Hourly Rate</inlineHelpText>
    <label>Hours Scheduled Value (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>