DigicielFull/force-app/main/default/objects/amc__Role_Allocation__c/fields/amc__Manual_Allocation__c.field-meta.xml
<CustomField>
    <fullName>amc__Manual_Allocation__c</fullName>
    <description>Displays the Manual Allocation value of the parent Action, Role Forecast, or Holiday Record</description>
    <formula>OR( amc__Action__r.amc__Manual_Allocation__c, amc__Role_Forecast__r.amc__Manual_Allocation__c, amc__Holiday__r.amc__Manual_Allocation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Manual Allocation value of the parent Action, Role Forecast, or Holiday Record</inlineHelpText>
    <label>Manual Allocation</label>
    <type>Checkbox</type>
</CustomField>