DigicielFull/force-app/main/default/objects/amc__Role_Allocation__c/fields/amc__Skill__c.field-meta.xml
<CustomField>
    <fullName>amc__Skill__c</fullName>
    <formula>IF(NOT(ISBLANK(amc__Action__c)), amc__Action__r.amc__Skill__r.Name, amc__Role_Forecast__r.amc__Skill__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Identifies the Skill Name referenced on the Action or Role Forecast record this Role Allocation relates to</inlineHelpText>
    <label>Skill</label>
    <type>Text</type>
</CustomField>